fix overflow x

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -996,15 +996,19 @@ video {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Inter";
-  overflow-x: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -1059,26 +1063,6 @@ circle-progress::part(value) {
   stroke-width: 14;
   stroke-linecap: round;
   stroke: #7f56d9;
-}
-
-.circular-progress {
-  position: relative;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background: conic-gradient(white 3.6deg, #d946ef 0deg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circular-progress::before {
-  content: "";
-  position: absolute;
-  width: 210px;
-  height: 210px;
-  border-radius: 50%;
-  background-color: #fff;
 }
 
 .progress-value {
